# CodeReading

./: README.md
CV/YOLOv10-OpenVINO-CPP-Inference/: README阅读概述.md
CV/YOLOv10-OpenVINO-CPP-Inference/src/: CMakeLists.txt  inference.cc  inference.h  main_camera.cc  main_detect.cc  main_video.cc  utils.cc  utils.h
LLMs/: modeling_qwen2.py
LLMs/ChatGLM3-6B/: modeling_chatglm.py
LLMs/ChatGLM4-9B/: config.json  generation_config.json
LLMs/Qwen2-0.5B/: README.md
LLMs/Qwen2-0.5B/qwen2/: config.json  generation_config.json
LLMs/position_encoding/: README.md
torch/: README.md
torch/nn/: README.md  parameter.py  parameter.pyi
torch/nn/modules/: module.py
transformers/: README.md
transformers/已阅读/: modeling_utils.py
